feat(admin): estandarizar módulo RRHH con identidad visual del dashboard
- Reemplazar tarjetas KPI antiguas (gc-stat-card) por el sistema gs-stats-grid del dashboard
- Alinear header, filtros y tabla al mismo borde lateral del contenedor admin-content
- Implementar campo 'bloqueado' en la entidad Usuario con migración Flyway (V4)
- Agregar validación de bloqueo permanente en el flujo de autenticación (CustomUserDetailsService)
- Añadir endpoint PUT /admin/api/rrhh/{id}/toggle-bloqueo para bloquear/desbloquear usuarios
- Actualizar métricas reales de Bloqueados, Activos y Pendientes en AdminController
- Implementar búsqueda multicriterio (nombre, apellido, email, documento) via JPQL con JOIN
- Aplicar filtro real por estado (Activo/Pendiente/Bloqueado) en la query de listado RRHH
- Hacer que la exportación Excel respete los filtros activos y añadir columnas Documento y Cargo
- Eliminar archivo cards.html obsoleto
- Incluir campos documento y cargo en RegistroUsuarioDTO, UsuarioRegistradoEvent y RRHHRegistrationListener